go to project 1

--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -58,19 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm going to inject some text here, and more text here.\n"
+      "I'm going to inject some text here, and more text here.Hunk\n"
      ]
     }
    ],
    "source": [
-    "print(\"I'm going to inject %s text here, and %s text here.\" %('some','more'))"
+    "print(\"I'm going to inject %s text here, and %s text here.%s\" %('some','more','Hunk'))"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +168,13 @@
      "output_type": "stream",
      "text": [
       "I wrote 3.75 programs today.\n",
-      "I wrote 3 programs today.\n"
+      "I wrote 3 programs today. 3\n"
      ]
     }
    ],
    "source": [
     "print('I wrote %s programs today.' %3.75)\n",
-    "print('I wrote %d programs today.' %3.75)   "
+    "print('I wrote %d programs today. %d' %(3.75, 3))   "
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -403,14 +403,16 @@
      "output_type": "stream",
      "text": [
       "A penny saved is a penny earned.\n",
-      "A penny saved is a penny earned.\n"
+      "A penny saved is a penny earned.\n",
+      "this man Hunk is Hunk\n"
      ]
     }
    ],
    "source": [
     "print('A %s saved is a %s earned.' %('penny','penny'))\n",
     "# vs.\n",
-    "print('A {p} saved is a {p} earned.'.format(p='penny'))"
+    "print('A {p} saved is a {p} earned.'.format(p='penny'))\n",
+    "print ('this man {h} is {h}'.format(h='Hunk'))"
    ]
   },
   {
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +513,15 @@
      "output_type": "stream",
      "text": [
       "This is my ten-character, two-decimal number:     13.58\n",
-      "This is my ten-character, two-decimal number:     13.58\n"
+      "This is my ten-character, two-decimal number:     13.58\n",
+      "This is 13.00     \n"
      ]
     }
    ],
    "source": [
     "print('This is my ten-character, two-decimal number:%10.2f' %13.579)\n",
-    "print('This is my ten-character, two-decimal number:{0:10.2f}'.format(13.579))"
+    "print('This is my ten-character, two-decimal number:{0:10.2f}'.format(13.579))\n",
+    "print('This is {0:<10.2f}'.format(13,2222))"
    ]
   },
   {
@@ -552,14 +556,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He said his name is Fred.\n"
+      "He said his name is Fred.\n",
+      "this is Hunk s\n"
      ]
     }
    ],
    "source": [
     "name = 'Fred'\n",
     "\n",
-    "print(f\"He said his name is {name}.\")"
+    "hunk = 'Hunk s'\n",
+    "print(f\"He said his name is {name}.\")\n",
+    "print(f'this is {hunk}')"
    ]
   },
   {
@@ -602,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -610,14 +617,16 @@
      "output_type": "stream",
      "text": [
       "My 10 character, four decimal number is:   23.4568\n",
-      "My 10 character, four decimal number is:   23.4568\n"
+      "My 10 character, four decimal number is:   23.4568\n",
+      "my number is    23.4568\n"
      ]
     }
    ],
    "source": [
     "num = 23.45678\n",
     "print(\"My 10 character, four decimal number is:{0:10.4f}\".format(num))\n",
-    "print(f\"My 10 character, four decimal number is:{num:{10}.{6}}\")"
+    "print(f\"My 10 character, four decimal number is:{num:{10}.{6}}\")\n",
+    "print(f'my number is {num:{10.6}}')"
    ]
   },
   {
@@ -656,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -664,14 +673,27 @@
      "output_type": "stream",
      "text": [
       "My 10 character, four decimal number is:   23.4500\n",
-      "My 10 character, four decimal number is:   23.4500\n"
+      "My 10 character, four decimal number is:   23.4500\n",
+      "Hunk is the top 1\n",
+      "Hunk is the top 1\n",
+      "Hunk is the top 1\n",
+      "pi format =   13.14159\n",
+      "pi f = 13.14159  \n"
      ]
     }
    ],
    "source": [
     "num = 23.45\n",
     "print(\"My 10 character, four decimal number is:{0:10.4f}\".format(num))\n",
-    "print(f\"My 10 character, four decimal number is:{num:10.4f}\")"
+    "print(f\"My 10 character, four decimal number is:{num:10.4f}\")\n",
+    "name,int_num = 'Hunk', 1\n",
+    "print ('{1} is the top {0}'.format(int_num, name))\n",
+    "print ('{h} is the top {n}'.format(h=name, n=int_num))\n",
+    "print (f'{name} is the top {int_num}')\n",
+    "\n",
+    "pi=13.1415926\n",
+    "print('pi format = {0:10.7}'.format(pi))\n",
+    "print(f'pi f = {pi:<{10.7}}')"
    ]
   },
   {
@@ -705,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
