--- a/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
+++ b/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
@@ -258,25 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'olleh'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
     }
    ],
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
     "\n",
-    "s[::-1]"
+    "s[::-1]\n",
+    "\n",
+    "alist = range(10)\n",
+    "print([a for a in alist[::2]])"
    ]
   },
   {
@@ -943,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
