--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3*3.14*rad*rad*rad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,25 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "#     return num >= low and num <= high\n",
+    "    return num in range(low, high+1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,20 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ran_bool(3,1,10)"
    ]
@@ -135,27 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "     return sum(map(lambda x:1 if x.isupper() else 0, s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -176,17 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +189,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,26 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import reduce\n",
     "def multiply(numbers):  \n",
-    "    pass"
+    "    return reduce(lambda x,y:x+y, numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-24"
+       "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,32 +252,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    return s == s[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('healleh')"
    ]
   },
   {
@@ -302,19 +297,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    return set(str1) >= set(alphabet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +318,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +338,7 @@
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +373,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
