--- a/02-Python Statements/03-for Loops.ipynb
+++ b/02-Python Statements/03-for Loops.ipynb
@@ -426,7 +426,7 @@
    ],
    "source": [
     "# Now with unpacking!\n",
-    "for (t1,t2) in list2:\n",
+    "for t1,t2 in list2:\n",
     "    print(t1)"
    ]
   },
@@ -441,6 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Example 7"
    ]
   },
@@ -531,7 +532,7 @@
     }
    ],
    "source": [
-    "# Dictionary unpacking\n",
+    "# Dictionary unpackingbg\n",
     "for k,v in d.items():\n",
     "    print(k)\n",
     "    print(v) "
@@ -619,7 +620,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
